[package]
name = "ssimulacra2_rs"
version = "0.5.3"
edition = "2021"
description = "Binary exposing the ssimulacra2 rust implementation"
repository = "https://github.com/rust-av/ssimulacra2_bin"
homepage = "https://github.com/rust-av/ssimulacra2_bin"
license = "BSD-2-Clause"

# When changing MSRV: Also update .github/workflows/rust.yml
rust-version = "1.80.1"

[dependencies]
anyhow = "1.0.93"
av-metrics-decoders = { version = "0.3.2", features = [
    "vapoursynth",
    "y4m",
], optional = true }
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
indicatif = "0.17.9"
num-traits = { version = "0.2.19", optional = true }
ssimulacra2 = { version = "0.5.0", default-features = false }
statrs = { version = "0.17.1", optional = true }

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["png", "jpeg", "webp", "hdr", "exr", "avif-native"]

[dependencies.plotters]
version = "0.3.7"
default-features = false
features = ["bitmap_backend", "area_series", "ttf"]
optional = true

[profile.release]
lto = "thin"
codegen-units = 1

[features]
default = ["video"]
video = ["av-metrics-decoders", "plotters", "statrs", "num-traits"]
